fix word wrapping

--- a/custom.css
+++ b/custom.css
@@ -113,7 +113,6 @@ textarea {
 {
 	border-radius: 4px;
 	float: right;
-	padding-bottom: 5px;
 
 }
 
@@ -142,11 +141,13 @@ textarea {
 	font-size: 16px;
 	line-height: 1.42857143;
 	color: #333;
-	word-break: break-all;
+	word-break: normal;
 	word-wrap: break-word;
+	overflow-wrap: break-word;
 	background-color: #FFFBFF;
 	border: 0px ;
 	border-radius: 0px;
+	white-space: pre-wrap;
 }
 
 /* for the comments on the event live page */
